force-app/main/default/objects/Pricing_Matrix__c/Pricing_Matrix__c.object-meta.xml
<CustomObject>
    <label>Pricing Matrix</label>
    <nameField>
        <label>Pricing Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>