force-app/main/default/objects/Pricing_Matrix__c/fields/Price_per_EE__c.field-meta.xml
<CustomField>
    <fullName>Price_per_EE__c</fullName>
    <label>Price per EE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>