force-app/main/default/objects/Pricing_Matrix__c/fields/Pricing_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Matrix__c</fullName>
    <formula>IF(
 ISPICKVAL(Pricing_Type__c,&quot;Cost per EE&quot;), Name &amp; &quot;: $&quot; &amp; text( Price_per_EE__c),
IF(
ISPICKVAL(Pricing_Type__c,&quot;Gross Profit Margin&quot;), Name &amp; &quot;: &quot; &amp; text( Gross_Profit_Margin__c )&amp;&quot;%&quot;,NULL))</formula>
    <label>Pricing Matrix</label>
    <type>Text</type>
</CustomField>