force-app/main/default/objects/Pricing_Matrix__c/fields/Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Type__c</fullName>
    <label>Pricing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost per EE</fullName>
            </value>
            <value>
                <fullName>Gross Profit Margin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>