force-app/main/default/objects/Pricing_Matrix__c/listViews/Pricing_Matrix.listView-meta.xml
<ListView>
    <fullName>Pricing_Matrix</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Pricing_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Stage__c</columns>
    <columns>Price_per_EE__c</columns>
    <columns>Gross_Profit_Margin__c</columns>
    <filterScope>Everything</filterScope>
    <label>Pricing Matrix</label>
</ListView>